<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender">

    <TextView
        android:id="@+id/welcome_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_new_user_msg"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/fifty_dp_padding_value"
        />

    <EditText
        android:id="@+id/get_new_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/new_username"
        android:layout_below="@+id/welcome_new_user"
        android:padding="@dimen/twentyfive_px_spacing"
        android:layout_marginTop="@dimen/twentyfive_px_spacing"
        />
    <EditText
        android:id="@+id/get_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:layout_below="@+id/get_new_username"
        android:padding="@dimen/twentyfive_px_spacing"
        android:layout_marginTop="@dimen/twentyfive_px_spacing"
        />
    <EditText
        android:id="@+id/re_enter_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/reEnter_password"
        android:layout_below="@+id/get_new_password"
        android:padding="@dimen/twentyfive_px_spacing"
        android:layout_marginTop="@dimen/twentyfive_px_spacing"
        />
    <Button
        android:id="@+id/submit_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@+id/re_enter_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fifty_px_spacing"
        />
    <Button
        android:id="@+id/go_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_home"
        android:layout_below="@+id/submit_new_user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fifty_px_spacing"
        />

</RelativeLayout>