<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/goldenrod">

    <TextView
        android:id="@+id/welcome_new_interstitial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_interstitial_msg"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/fifty_dp_padding_value"
        />

    <Button
        android:id="@+id/enter_data_btn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/yes"
        android:layout_below="@+id/welcome_new_interstitial"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/not_now_btn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/no_go_home"
        android:layout_below="@+id/welcome_new_interstitial"
        android:layout_toRightOf="@+id/enter_data_btn"
        android:layout_marginLeft="@dimen/twentyfive_px_spacing"
        />

</RelativeLayout>