<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_bamboo_green">

    <TextView
        android:id="@+id/thank_you_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thank_you_for_info"
        android:padding="@dimen/fifty_dp_padding_value"
        android:layout_centerHorizontal="true"
        />

    <Button
         android:id="@+id/yes_another"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/yes"
         android:layout_below="@+id/thank_you_msg"
         android:layout_centerHorizontal="true"
         android:layout_margin="@dimen/twentyfive_px_spacing"
        />
    <Button
        android:id="@+id/no_more"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/no"
        android:layout_below="@+id/yes_another"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/twentyfive_px_spacing"
        />
</RelativeLayout>